# robotx_core

./: .gitignore  .travis.yml  README.md  build_dpkg.bash  build_in_jetson.sh  dependencies.rosinstall  frames.gv  mbed_setting.sh
robotx_bringup/: CMakeLists.txt  package.xml  rosaddress.bash  setup_rosadress.sh
robotx_bringup/launch/: ground_station.launch  jetson_0.launch  jetson_1.launch  jetson_2.launch  record.launch
robotx_bringup/launch/aibox1/: aibox1.launch  gateway.launch  sensors.launch  time_sync.launch
robotx_bringup/launch/aibox2/: aibox2.launch  navigation.launch  perception.launch  sensors.launch  serial_devices.launch  time_sync.launch
robotx_bringup/launch/aibox3/: aibox3.launch  sensors.launch  serial_devices.launch  time_sync.launch
robotx_bringup/launch/sensor/: ai_pilot.launch  front_velodyne.launch  nmea_navsat.launch  uvc_camera.launch  velodyne.launch
robotx_bringup/launch_rosbag/: replay.launch
robotx_bringup/memo/: hosts  jetson_property.md
robotx_bringup/twist_workbench/aibox2/: aibox2.launch
robotx_build_flags/: CMakeLists.txt  package.xml
robotx_build_flags/cmake/: toolchain.cmake
robotx_build_flags/docker/: Dockerfile  README.md  build.sh  clean.sh  run.sh
robotx_build_flags/sh/: .gitignore  Makefile  README.md  allatonce-update.sh  allatonce.sh  compile.sh  download.sh  setup.sh  update.sh
robotx_core/: CMakeLists.txt  package.xml
robotx_debug_tools/: CMakeLists.txt  package.xml
robotx_debug_tools/include/robotx_debug_tools/: robotx_glog_tools.h
robotx_debug_tools/src/: robotx_glog_tools.cpp
robotx_decision_maker/: CMakeLists.txt  package.xml
robotx_decision_maker/config/: robotx_navigation_planner.yaml
robotx_decision_maker/data/: control_state_machine.dot  control_state_machine.xml  generate_pdf.sh  mission_state_machine.dot  mission_state_machine.xml  navigation_state_machine.dot  navigation_state_machine.xml
robotx_decision_maker/data/full/: mission_state_machine.xml
robotx_decision_maker/include/: control_state_machine.h  mission_state_machine.h  navigation_state_machine.h  robotx_navigation_planner.h  robotx_task_planner.h  rostate_machine.h  state_machine.h
robotx_decision_maker/launch/: decision_maker.launch
robotx_decision_maker/src/: control_state_machine.cpp  mission_state_machine.cpp  navigation_state_machine.cpp  robotx_decision_maker_node.cpp  robotx_navigation_planner.cpp  robotx_navigation_planner_node.cpp  robotx_state_machine_node.cpp  robotx_task_planner.cpp  robotx_task_planner_node.cpp  rostate_machine.cpp  state_machine.cpp
robotx_driver/: CMakeLists.txt  package.xml
robotx_driver/cfg/: frame_publisher.cfg  gps_to_base_link.cfg  sc30_driver.cfg
robotx_driver/config/: ai_pilot_velodyne.yaml  battery_monitor_driver.yaml  calibrate_tf.rviz  dynamixel.yaml  frame_publisher.yaml  front_velodyne.yaml  gps_to_base_link.yaml  hardware.yaml  left_engine_dynamixel_driver.yaml  left_thrust_driver.yaml  mqtt_bridge.yaml  mqtt_bridge_ground_station.yaml  mqtt_joy_ground_station.yaml  mqtt_joy_wamv.yaml  nmea_navsat_driver.yaml  replay.rviz  requirements.txt  right_engine_dynamixel_driver.yaml  right_thrust_driver.yaml  sc30_driver.yaml  sc_30_driver.yaml  serial_sender.yaml  signal_lamp_driver.yaml  signal_light_driver.yaml  simulation.yaml  technical_network_bridge.yaml
robotx_driver/data/: watec.txt  watec.yaml
robotx_driver/include/: battery_monitor_driver.h  dynamixel_driver.h  frame_publisher.h  gps_to_base_link.h  joy_analyzer.h  remote_operated_interface.h  robotx_hardware_interface.h  sc30_driver.h  serial_sender.h  signal_lamp_driver.h  tcp_server.h  technical_network_bridge.h
robotx_driver/launch/: ai_pilot_velodyne.launch  calibrate_frames.launch  cariblate_camera.launch  com_test.launch  communication.launch  dynamiexl_drivers.launch  dynamixel.launch  dynamixel_drivers.launch  frame_publisher.launch  front_velodyne.launch  hardware.launch  imu.launch  left_thrust_driver.launch  mqtt_bridge_ground_station.launch  mqtt_joy_ground_station.launch  right_thrust_driver.launch  sc30_driver.launch  serial_devices.launch  serial_sender.launch  signal_light_driver.launch  simulation.launch  velodyne.launch  watec.launch
robotx_driver/launch/bringup/: aibox1.launch  aibox2.launch  aibox3.launch  bringup_full.launch  test.launch
robotx_driver/launch_bringup/: record.launch
robotx_driver/launch_bringup/aibox1/: aibox1.launch
robotx_driver/launch_bringup/aibox2/: aibox2.launch
robotx_driver/launch_bringup/aibox3/: actuators.launch
robotx_driver/script/: ping_logger.py  watchdog.py
robotx_driver/src/: battery_monitor_driver.cpp  battery_monitor_driver_node.cpp  dynamixel_driver.cpp  dynamixel_driver_node.cpp  frame_publisher.cpp  frame_publisher_node.cpp  gps_to_base_link.cpp  gps_to_base_link_node.cpp  joy_analyzer.cpp  remote_operated_interface.cpp  robotx_hardware_interface.cpp  robotx_hardware_interface_node.cpp  sc30_driver.cpp  sc30_driver_node.cpp  serial_sender.cpp  serial_sender_node.cpp  serial_test.cpp  signal_lamp_driver.cpp  signal_lamp_driver_node.cpp  tcp_client.cpp  tcp_server.cpp  technical_network_bridge.cpp  technical_network_bridge_node.cpp
robotx_msgs/: CMakeLists.txt  (+1 more)
robotx_pcl_tools/: CMakeLists.txt  package.xml
robotx_pcl_tools/launch/: pcl_plane_removal.launch
robotx_twist_controller/: CMakeLists.txt  package.xml
robotx_twist_controller/include/: robotx_twist_controller.hpp
robotx_twist_controller/launch/: from_twist.launch  pointcloud_to_pointcloud2.launch  twist_controller.launch
robotx_twist_controller/src/: robotx_twist_controller.cpp
wamv_description/: CMakeLists.txt  package.xml
wamv_description/launch/: basic.launch  robotx.launch
wamv_description/urdf/: wamv_basic.urdf.xacro  wamv_basic.xacro  wamv_robotx.urdf.xacro  wamv_simple.urdf
wamv_description/urdf/ball_launcher/: ball_launcher.urdf.xacro
wamv_description/urdf/base/: wamv_base.urdf.xacro
wamv_description/urdf/engine/: engine.transmission.xacro  engine.urdf.xacro
wamv_description/urdf/sensors/: sensors.urdf.xacro
wamv_description/urdf/thruster/: engine.xacro
(+188 files in other folders)
