<?xml version="1.0"?>
<package format="2">
  <name>robotx_bringup</name>
  <version>0.0.0</version>
  <description>The robotx_bringup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="masaya@todo.todo">masaya</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotx_decision_maker</build_depend>
  <build_depend>robotx_driver</build_depend>
  <build_depend>robotx_msgs</build_depend>
  <build_depend>robotx_navigation</build_depend>
  <build_depend>robotx_recognition</build_depend>
  <build_depend>robotx_twist_controller</build_depend>
  <build_depend>wamv_description</build_depend>
  <build_export_depend>robotx_decision_maker</build_export_depend>
  <build_export_depend>robotx_driver</build_export_depend>
  <build_export_depend>robotx_msgs</build_export_depend>
  <build_export_depend>robotx_navigation</build_export_depend>
  <build_export_depend>robotx_recognition</build_export_depend>
  <build_export_depend>robotx_twist_controller</build_export_depend>
  <build_export_depend>wamv_description</build_export_depend>
  <exec_depend>robotx_decision_maker</exec_depend>
  <exec_depend>robotx_driver</exec_depend>
  <exec_depend>robotx_msgs</exec_depend>
  <exec_depend>robotx_navigation</exec_depend>
  <exec_depend>robotx_recognition</exec_depend>
  <exec_depend>robotx_twist_controller</exec_depend>
  <exec_depend>wamv_description</exec_depend>
  <exec_depend>ntpd_driver</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
