<?xml version="1.0"?>
<package format="2">
  <name>robotx_build_flags</name>
  <version>0.0.0</version>
  <description>The robotx_build_flags package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
