<?xml version="1.0"?>
<package format="2">
  <name>robotx_core</name>
  <version>0.1.0</version>
  <description>The robotx_core package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>

  <license>GPL</license>

  <url type="repository">http://github.com/OUXT-Polaris/robotx_core</url>

  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robotx_driver</depend>
  <depend>robotx_msgs</depend>
  <depend>robotx_navigation</depend>
  <depend>robotx_recognition</depend>
  <depend>wamv_description</depend>
  
  <export>
    <metapackage/>
  </export>

</package>
