<?xml version="1.0"?>
<package format="2">
  <name>robotx_core</name>
  <version>0.1.0</version>
  <description>The robotx_core package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>

  <license>GPL</license>

  <url type="repository">http://github.com/OUXT-Polaris/robotx_core</url>

  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotx_driver</exec_depend>
  <exec_depend>robotx_msgs</exec_depend>
  <exec_depend>robotx_navigation</exec_depend>
  <exec_depend>robotx_recognition</exec_depend>
  <exec_depend>wamv_description</exec_depend>
  <exec_depend>robotx_twist_controller</exec_depend>
  <exec_depend>robotx_decision_maker</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
