<?xml version="1.0"?>
<package format="2">
  <name>robotx_decision_maker</name>
  <version>0.0.0</version>
  <description>The robotx_decision_maker package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>

  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotx_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>robotx_navigation</build_depend>

  <build_export_depend>robotx_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>robotx_navigation</build_export_depend>

  <exec_depend>robotx_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>robotx_navigation</exec_depend>

  <export>
  </export>
</package>
