<?xml version="1.0"?>
<package format="2">
  <name>robotx_driver</name>
  <version>0.0.0</version>
  <description>The robotx_driver package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>robotx_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>python-bloom</build_depend>
  <build_depend>fakeroot</build_depend>
  <build_depend>nmea_msgs</build_depend>

  <build_export_depend>joy</build_export_depend>
  <build_export_depend>robotx_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  
  <exec_depend>joy</exec_depend>
  <exec_depend>robotx_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_common_diagnostics</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>dynamixel_workbench</exec_depend>
  <exec_depend>dynamixel_workbench_controllers</exec_depend>
  <exec_depend>multimaster_fkie</exec_depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>uvc_camera</exec_depend>
  <exec_depend>opencv_apps</exec_depend>
  <exec_depend>mqtt_bridge</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
