<?xml version="1.0"?>
<package format="2">
  <name>robotx_twist_controller</name>
  <version>0.0.1</version>
  <description>The robotx_twist_controller package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
</package>
