<?xml version="1.0"?>
<package format="2">
  <name>wamv_description</name>
  <version>0.0.0</version>
  <description>The wamv_description package</description>

  <maintainer email="groadpg@gmail.com">RyodoTanaka</maintainer>
  <author>RyodoTanaka</author>
  <author>masaya</author>

  <license>GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-bloom</build_depend>
  <build_depend>fakeroot</build_depend>
  
  <depend>roslaunch</depend>
  <depend>xacro</depend>
  <depend>velodyne_description</depend>
  <build_depend>robotx_build_flags</build_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
